# advent-of-code-2022

./: advent-of-code-2022.cabal  flake.nix
