cabal-version: 3.0
name: AdventOfCode2022
version: 0.1.0.0
synopsis: Advent of Code 2022 solutions
license: GPL-3.0-only
license-file: LICENSE
author: Alex Bechanko
maintainer: alexbechanko@gmail.com
build-type: Simple
common warnings
    ghc-options: -Wall
executable advent-of-code-2022
    import: warnings
    main-is: Main.hs
    build-depends: base ^>=4.15.1.0
    hs-source-dirs: app
    default-language: Haskell2010